--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-header-scroll-view": "^1.0.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-responsive-screen": "^1.4.2",
