--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-header-scroll-view": "^1.0.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^13.2.2",
     "react-native-youtube-iframe": "^2.2.2"
